syntax = "proto3";

package productreviews;

// Die Produktbewertung enthält die Produkt-ID, die Bewertungen und die Bewertungen zu einem Produkt
message ProductReview {
    string prodid = 1;        // Produkt-ID
    repeated string review = 2;    // Liste von Bewertungen (String)
    repeated int64 rating = 3;    // Liste von Bewertungen (long)
}

// Eine Anfrage, um eine Bewertung zu einem Produkt hinzuzufügen
message AddReviewRequest {
    string prodid = 1;      // Produkt-ID
    string review = 2;      // Die Textbewertung
    int64 rating = 3;       // Die Bewertung (z.B. eine Zahl von 1 bis 5)
}

// Eine Antwort auf die Anfrage zum Hinzufügen einer Bewertung
message AddReviewResponse {
    bool success = 1;       // Gibt an, ob das Hinzufügen erfolgreich war
}

// Eine Anfrage, um alle Bewertungen für ein Produkt abzurufen
message GetReviewsRequest {
    string prodid = 1;      // Produkt-ID
}

// Eine Antwort, die alle Bewertungen und Bewertungen für ein Produkt zurückgibt
message GetReviewsResponse {
    repeated string reviews = 1;   // Liste von Bewertungen
    repeated int64 ratings = 2;    // Liste von Bewertungen (z.B. 1-5)
}

// Eine Anfrage, um das durchschnittliche Rating für ein Produkt zu berechnen
message GetAverageRatingRequest {
    string prodid = 1;      // Produkt-ID
}

// Eine Antwort, die das durchschnittliche Rating und die Anzahl der Bewertungen enthält
message GetAverageRatingResponse {
    double average_rating = 1;  // Durchschnittsbewertung
    int32 review_count = 2;     // Anzahl der Bewertungen
}

// Produktbewertungen als Ganzes
message ProductReviews {
    repeated ProductReview productReviews = 1;    // Liste von Produktbewertungen
}